# Calendar

./: .gitignore  Context.md  docker-compose.yml  start.sh  stop.sh
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_bookings.py  002_auth_and_resources.py  003_escalations.py  004_escalation_summary_and_chat_notified.py  005_knowledge_entries.py  006_contacts.py  007_fix_knowledge_entries.py  008_telegram_chat_id_bigint.py  009_email_config.py  010_email_gmail_provider.py
backend/app/: main.py
backend/app/api/: auth.py  calendar_ics.py  chat.py  deps.py  deps_auth.py  email_config.py  escalations.py  knowledge.py  resources.py  tenants.py  webhooks.py
backend/app/core/: config.py  db.py  encryption.py
backend/app/db/: models.py
backend/app/graph/: nodes.py  state.py  workflow.py
backend/app/services/: _tg_ref.py  booking.py  email_poller.py  email_service.py  escalation_rules.py  exceptions.py  gmail_service.py  notifications.py  tools.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: NewBookingDialog.tsx  ProtectedRoute.tsx
frontend/src/hooks/: use-bookings.ts  use-knowledge.ts  use-public-bookings.ts
frontend/src/layouts/: DashboardLayout.tsx
frontend/src/lib/: api.ts  auth.tsx  chat.ts  knowledge.ts
frontend/src/pages/: AdminEscalationsPage.tsx  AdminResourcesPage.tsx  AgentPlaygroundPage.tsx  AuthCallbackPage.tsx  CalendarPage.tsx  EmailInboxPage.tsx  KnowledgeBasePage.tsx  LandingPage.tsx  LoginPage.tsx  (+3 more)
(+8 files in other folders)
